--- a/src/app/page/Company/companypage/companypage.component.scss
+++ b/src/app/page/Company/companypage/companypage.component.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     z-index: 9999;
     position:static;
-  }
+}
   
   .company-logo {
     width: 50px; /* Set the width of the logo */
@@ -27,6 +27,13 @@
     flex: 1; /* Ensure cards have equal width */
     margin: 8px; /* Add margin around each card */
     max-width: 30%; /* Limit card width to fit 3 cards in one row */
+  }
+
+  .icon-inrow {
+    display: flex;
+    align-items: center; /* Centers the content vertically */
+    gap: 10px;
+    padding: 10px;
   }
   
 
