--- a/src/app/page/Route/routecomppage/routecomppage.component.scss
+++ b/src/app/page/Route/routecomppage/routecomppage.component.scss
@@ -25,3 +25,10 @@
   text-align: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+
+.icon-inrow {
+  display: flex;
+  align-items: center; /* Centers the content vertically */
+  gap: 10px;
+  padding: 10px;
+}
