--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,3 +35,18 @@
       margin-left: 5px;
   }
 
+  .userimg {
+    padding: 5px;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    vertical-align: middle;
+    // border: 1px solid #cee1f0;
+  }
+  .empname {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100px; /* Adjust width based on your layout */
+  }
+
