--- a/src/app/page/Plan/plandatapage/plandatapage.component.html
+++ b/src/app/page/Plan/plandatapage/plandatapage.component.html
@@ -1,1 +1,309 @@
-<p>plandatapage works!</p>
+<div class="header">
+  <!-- Header data & close button -->
+  <div class="row px-3 py-0" [style.background-color]="editplan?'#effc8d':'#8dfcf6'"
+       style="display: flex; justify-content: space-between; align-items: center; width:100%; margin: 0;">
+    
+    <div class="col-1" style="display: flex; justify-content: center; align-items: center; padding:5px ;" >
+      <img class="profileimg me-4" [src]="vehicle.driverimage==''? va.icon.nologo : vehicle.driverimage">
+    </div>
+
+    <div class="col-7" style="display: flex; justify-content: start; align-items: center; padding:5px ;">
+      <div >
+        <div class="row" *ngIf="planslot.plantype == 2">
+          <span *ngIf="!editplan" > 
+            สร้างแผนการทำงานประจำวัน
+            {{planslot.dayname}} ({{planslot.starttime}} - {{planslot.endtime}})
+          </span>
+          <span *ngIf="editplan"> 
+            แก้ไขแผนการทำงานประจำวัน
+            {{planslot.dayname}} ({{planslot.starttime}} - {{planslot.endtime}})
+          </span>
+        </div>
+        <div class="row">
+          <span> รถ {{vehicle.vlicent}} ({{vehicle.vname}}) </span>
+        </div>
+      
+      </div>
+      
+    </div>
+
+    <div class="col-4" style="display: flex;  justify-content:end; align-items:end ;">
+      <div class="row">
+        <div class="icon-inrow">
+          <div class="icon-inrow" (click)="deleteplan()" *ngIf="editplan" >
+            <span>ลบ</span>
+            <mat-icon style="width: auto; color: red;">cancel</mat-icon>
+          </div>
+          <div class="icon-inrow" (click)="saveplan()" *ngIf="onperiod">
+            <span>บันทึก</span>
+            <mat-icon style="width: auto; color: green;">send</mat-icon>
+          </div>
+          <div class="icon-inrow" (click)="modal.close()">
+            <span>ปิด</span>
+            <mat-icon style="width: auto; ">arrow_forward_ios</mat-icon>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- Body & spinner -->
+<div class="position-relative" style="height: 100%; width:100%; overflow: hidden;">
+  <!-- spinner -->
+  <div class="container-spiner" *ngIf="show.Spinner">
+    <div class="row">
+      Please Watting...
+    </div>
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <!-- Body -->
+  <div style="width:100%; padding: 20px;"  [style.background-color]="onperiod?'#c2fbbe':'#faa6a6'" >
+    <div class="icon-inrow" style="padding: 0; margin: 0;">
+      <div  *ngIf="!editplan && !routedata" >
+        <label for="routeSelect" style="margin-right: 5px;">เส้นทาง : </label>
+        <select id="routeSelect" [(ngModel)]="selectrout" style="text-align: right; text-align-last: right; "
+          (change)="routechange()">
+          <option *ngFor="let item of routelist" [ngValue]="item">
+            {{item.routename}}
+          </option>
+        </select>
+      </div>
+
+      <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน" *ngIf="editplan || routedata" >
+        <mat-icon>linear_scale</mat-icon>
+        <span *ngIf="editplan">{{editplan?editplan.routename:''}}</span> 
+        <span *ngIf="routedata">{{routedata?routedata.routename:''}}</span> 
+      </div>
+
+      <div class="icon-inrow" matTooltip="จำนวนจุดรับ-ส่งพนักงาน">
+        <mat-icon>location_on</mat-icon>
+        <span>0 จุด</span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="ระยะทาง (กม.)">
+        <mat-icon> timeline </mat-icon>
+        <span> {{ selectrout.distance | number:'1.2-2' }} กม.</span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="ระยะเวลา (นาที)">
+        <mat-icon>update</mat-icon>
+        <span>{{ selectrout.period | number:'1.0-0'}} นาที</span>
+      </div>
+
+    </div>
+    <div class="icon-inrow" style="padding: 0; margin: 0;">
+      <div class="icon-inrow" matTooltip="เริ่มแจ้งพร้อมเริ่มงาน เวลา hh:mm (นาที)">
+        <mat-icon>check_circle</mat-icon>
+        <span>{{ selectrout.wakeupwarntime | date:'HH:mm'}}</span>
+        <span>({{ selectrout.wakeupwarn }} นาที) </span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="เตือนเมื่อไม่แจ้งพร้อมเริ่มงาน เวลา hh:mm (นาที)">
+        <mat-icon>cancel</mat-icon>
+        <span>{{ selectrout.wakeuptime | date:'HH:mm'}}</span>
+        <span>({{ selectrout.wakeup }} นาที)</span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="เตือนเมื่อไม่สตาร์ทรถ  เวลา hh:mm (นาที)">
+        <mat-icon>power_settings_new</mat-icon>
+        <span>{{ selectrout.startwarntime | date:'HH:mm'}}</span>
+        <span>({{ selectrout.startwarn }} นาที)</span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="เวลาที่ควรถึงจุดแรก  เวลา hh:mm">
+        <mat-icon>departure_board</mat-icon>
+        <span>{{ selectrout.starttime | date:'HH:mm'}}</span>
+      </div>
+
+      <div class="icon-inrow" matTooltip="เวลาที่ควรถึงปลายทาง เวลา hh:mm">
+        <mat-icon>flag</mat-icon>
+        <span>{{ selectrout.endtime | date:'HH:mm'}}</span>
+      </div>
+
+    </div>
+  </div>
+  <hr style="width:100%; padding: 0; margin: 0;"/>
+
+  <div style="width:100%; padding: 20px;" [style.background-color]="onperiod?'#c2fbbe':'#faa6a6'" >
+    <div class="row" matTooltip="รับ-ส่ง | กะงาน | OT">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>flag</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; text-align: right;  text-align-last: right;">
+       <label> รับ-ส่ง </label>
+       <select [(ngModel)]="activeplan.issend">
+        <option [value]="0">ส่งเข้าบริษัท</option>
+        <option [value]="1">รับกลับบ้าน</option>
+      </select>
+      </div>
+
+      <div class="col-4" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+        <div >
+          <label for="routeSelect" style="margin-right: 5px;">กะงาน : </label>
+          <select id="routeSelect" [(ngModel)]="selectshift" style="text-align: right; text-align-last: right; "
+            (change)="shiftchange()">
+            <option *ngFor="let item of listshift" [ngValue]="item">
+              {{item.descp}}
+            </option>
+          </select>
+        </div>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <label> OT </label>
+        <select [(ngModel)]="activeplan.ot">
+          <option [value]="0">ปกติ</option>
+          <option [value]="1">OT</option>
+        </select>
+      </div>
+
+      <div class="col-1" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+      </div>
+      
+    </div>
+    <hr />
+
+    <div class="row" matTooltip="เวลาที่ควรถึงปลายทาง">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>flag</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; text-align: right;  text-align-last: right;">
+      </div>
+
+      <div class="col-2" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <label for="routeSelect">เวลาที่ควรถึงปลายทาง</label>
+      </div>
+
+      <div class="col-2" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+        <!-- <select id="routeSelect" [(ngModel)]="selectdate" (change)="activeplanchange(0)">
+          <option *ngFor="let item of selectdate" [ngValue]="item">
+            {{ item.displaytime }}
+          </option>
+        </select>
+        <label style="margin-left: 5px;" for="routeSelect"> น.</label> -->
+
+        <input type="time" style="width: 80%;" [(ngModel)]="selectenttime"
+        (ngModelChange)="activeplanchange(0)" />
+        <label>นาที</label>
+
+      </div>
+      
+    </div>
+    <hr />
+
+    <div class="row" matTooltip="เวลาที่ควรถึงจุดแรก">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>departure_board</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center;  justify-content: end;">
+        <span> ระยะเวลาเดินทาง</span>
+      </div>
+
+      <div class="col-2" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+        <input type="number" style="width: 80%;" [(ngModel)]="activeplan.period"
+          (ngModelChange)="activeplanchange(1)" />
+        <label>นาที</label>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <span>เวลาที่ควรถึงจุดแรก</span>
+      </div>
+      <div class="col-2" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+        <span> {{activeplan.starttime | date:'HH:mm'}} น.</span>
+      </div>
+    </div>
+    <hr />
+
+    <div class="row" matTooltip="เวลาที่ต้องเตือนเมื่อไม่สตาร์ทรถ">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>power_settings_new</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center;  justify-content: end;">
+        <span> ต้องสตาร์ทรถก่อนเข้าจุดแรก</span>
+      </div>
+
+      <div class="col-2" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+        <input type="number" style="width: 80%;" [(ngModel)]="activeplan.startwarn"
+          (ngModelChange)="activeplanchange(2)" />
+        <label>นาที</label>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <span>ควรสตาร์ทรถก่อน</span>
+      </div>
+      <div class="col-2" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+        <span>{{activeplan.startwarntime | date:'HH:mm'}} น.</span>
+      </div>
+    </div>
+    <hr />
+
+    <div class="row" matTooltip="เวลาที่ต้องเตือนเมื่อไม่แจ้งพร้อมเริ่มงาน">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>cancel</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center;  justify-content: end;">
+        <span> แจ้งเริ่มงานก่อนเข้าจุดแรก</span>
+      </div>
+
+      <div class="col-2" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+        <input type="number" style="width: 80%;" [(ngModel)]="activeplan.wakeup"
+          (ngModelChange)="activeplanchange(3)" />
+        <label>นาที</label>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <span>แจ้งเริ่มงานก่อน</span>
+      </div>
+
+      <div class="col-2" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+        <span>{{activeplan.wakeuptime | date:'HH:mm'}} น.</span>
+      </div>
+    </div>
+    <hr />
+
+    <div class="row" matTooltip="เวลาเริ่มแจ้งพร้อมเริ่มงาน">
+      <div class="col-1" style=" align-items: center;">
+        <mat-icon>check_circle</mat-icon>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center;  justify-content: end;">
+        <span> เตือนเริ่มงานก่อนเข้าจุดแรก</span>
+      </div>
+
+      <div class="col-2" style="display: flex; align-items: center; gap: 10px; justify-content: start;">
+        <input type="number" style="width: 80%;" [(ngModel)]="activeplan.wakeupwarn"
+          (ngModelChange)="activeplanchange(4)" />
+        <label>นาที</label>
+      </div>
+
+      <div class="col-3" style="display: flex;  align-items: center; justify-content: end;">
+        <span>เริ่มแจ้งเริ่มงานได้ตั้งแต่</span>
+      </div>
+
+      <div class="col-2" style="display: flex;  align-items: center; justify-content: start; gap: 5px ;">
+        <span>{{activeplan.wakeupwarntime | date:'HH:mm'}} น.</span>
+      </div>
+    </div>
+    <hr />
+    
+    <div class="row" style="display: flex; justify-content: center; text-align: center; height: 100%; width: 100%;">
+      <span style="width: 100%; margin: 20px; color: white;" [style.background-color]="onperiod?'#0eab04':'#fc0404'" >
+        เวลาที่กำหนด ต้องอยู่ในช่วงเวลาที่ว่าง ({{planslot.starttime}} - {{planslot.endtime}})
+      </span>     
+    </div>
+    <hr />
+
+  </div>
+
+</div>
