--- a/src/app/page/Vehicle/vehiclecomppage/vehiclecomppage.component.html
+++ b/src/app/page/Vehicle/vehiclecomppage/vehiclecomppage.component.html
@@ -17,17 +17,17 @@
             <div class="row">
                 <div class="col" style="display: flex; align-items: center;"
                     [style.background-color]="show.viewtype==0?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                    matTooltip="แสดงภาพรวมพนักงานขับรถ" (click)="show.viewtype=0">
+                    matTooltip="แสดงข้อมูลแผนการเดินรถล่วงหน้า" (click)="show.viewtype=0">
                     <mat-icon style="width: 100%; color: blue;">dashboard</mat-icon>
                 </div>
                 <div class="col" style="display: flex; align-items: center;"
                     [style.background-color]="show.viewtype==1?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                    matTooltip="แสดงตามกลุ่มสถานะ" (click)="show.viewtype=1">
+                    matTooltip="แสดงข้อมูลแผนการเดินรถรายสัปดาห์" (click)="show.viewtype=1">
                     <mat-icon style="width: 100%; color: blue;">dns</mat-icon>
                 </div>
                 <div class="col" style="display: flex; align-items: center;"
                     [style.background-color]="show.viewtype==2?'#FFE5B4':'#FFFFFF'" mat-raised-button
-                    matTooltip="แสดงรายพนักงานขับรถ" (click)="show.viewtype=2">
+                    matTooltip="แสดงรายการแผนการเดินรถ" (click)="show.viewtype=2">
                     <mat-icon style="width: 100%; color: blue;">list</mat-icon>
                 </div>
             </div>
@@ -36,36 +36,98 @@
 
     <div class="row" style="width:100vw;">
         <!-- Left Column -->
-        <div class="col-4" style="height: 70vh; width:40hw; overflow: scroll;">
+        <div class="col-3" style="height: 70vh; width:40hw; overflow: scroll;">
             <div *ngFor="let item of maindata">
                 <div class="row" (click)="ShowVehicleDetail(item)">
                     <div class="container"
                         style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
-                        <div class="col ms-2" style="display:flexbox; text-align: start;">
+                        <div class="col" style="display: flex; justify-content: start; align-items: center; padding:5px ;">
                             <!-- setitem 1-->
-                            <img class="profileimg" [src]="item.driverlineimg==''?va.icon.user:item.driverlineimg" />
+                            <img class="profileimg" [src]="item.driverimage==''?va.icon.user:item.driverimage" />
                         </div>
 
-                        <div class="col" style="display:flexbox; text-align: start;">
+                        <div class="col" style="display: flex; justify-content: start; align-items: center; height: 100%; padding:5px ;">
                             <!-- setitem 2-->
                             {{item.vname}}
                         </div>
 
-                        <div class="col" style="display:flexbox; text-align: start;">
+                        <div class="col" style="display: flex; justify-content: start; align-items: center; height: 100%; padding:5px ;">
                             <!-- setitem 3-->
                             {{item.vlicent}}
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
 
         <!-- Righ Column -->
-        <div class="col-8" style="height: 70vh; width:60hw;">
-            <div *ngFor="let route of activedata.listroute">
+        <div class="col-9" style="height: 70vh; width:60hw;" *ngIf="show.viewtype==0">
+            <div>ข้อมูลแผนการเดินรถล่วงหน้า {{activedata.vname}} {{activedata.vlicent}}</div> 
+        </div>
 
+        <div class="col-9" style="height: 70vh; width:60hw;" *ngIf="show.viewtype==1">
+            <div class="row" style="display: flex;  justify-content: space-between; width: 100%; height:4vh ; 
+                background-color: lightblue; margin: 5px 30px;">
+                <div class="col-10" style="display: flex;  justify-content: start;align-items: center; height: 100%;">
+                    <span> ข้อมูลแผนการเดินรถรายสัปดาห์ {{activedata.vname}} {{activedata.vlicent}} </span>   
+                </div>
+                <div class="col-2" style="display: flex;  justify-content: center ;align-items: center; height: 100%; gap:10px" *ngIf="copyslot">
+                    <mat-icon style="width: auto; color: red;" (click)="clearcopyweekplan()" >
+                        close
+                    </mat-icon>
+                    <mat-icon style="width: auto; color: green;" (click)="updatecopyweekplan()" >
+                        content_paste
+                    </mat-icon>
+                </div>             
+
+            </div>
+            <div *ngFor="let wplan of weekplan" style="margin:0;padding:0;">
+                <div class="container" style="display: flex;  justify-content: space-between;margin-left: 20px;">
+                    <div class="col-1 " style="display: flex; justify-content: center; align-items: center;"
+                        [style.background-color]="wplan.colorday==''?'#FFFFFF':wplan.colorday" >
+                      <div style="text-align: center;" >
+                        {{ wplan.textdate }} <!-- Centered content -->
+                      </div>
+                    </div>
+                    <div class="col-10" style="display: flex; justify-content: start; align-items: center;overflow-x: scroll;">
+                        <div *ngFor="let item of wplan.listdata" class="col" style="text-align:center;margin: 0; padding: 0; gap: 0;">
+                            <div class="col" (click)="OpenWeekplan(item,wplan,plandetailmodal)" 
+                                style="display: flex; flex-direction: column; justify-content: space-between;"
+                                matTooltip="{{ item.starttime }}" matTooltipPosition="above">
+                                <!-- <div class="row" style="text-align:center ; height: 40px;">
+                                </div> -->
+                                <div *ngIf="item.starttime.includes(':00'); else noTimeDisplay" [style.background-color]="item.plancode==''?'#FFFFFF':'#FFE5B4'">
+                                    {{item.starttime.replace(':00', '') }}
+                                  </div>
+                                  <ng-template #noTimeDisplay>
+                                    <div style="display: block;" [style.background-color]="item.plancode==''?'#FFFFFF':'#FFE5B4'">
+                                        &nbsp;
+                                    </div>
+                                  </ng-template>
+
+                                <!-- <div class="row" style="justify-content: start;  width:50Px;" 
+                                    [style.background-color]="item.plancode==''?'#FFFFFF':'#FFE5B4'">
+                                    {{ item.starttime.includes(':00') ? item.starttime:'' }}
+                                </div> -->
+                              </div>
+                        </div>
+                    </div>
+
+                    <div class="col-1" *ngIf="(activedata.vid!=0)" style="display: flex;  justify-content: center; align-items: center; height: 100%;">
+                        <mat-icon style="color: blue;" *ngIf="!copyslot && !wplan.ismaseter " (click)="copyweekplan(wplan)">content_copy</mat-icon>
+                        <mat-checkbox  [(ngModel)]="wplan.isselect" *ngIf="copyslot && !wplan.ismaseter" ></mat-checkbox>
+                    </div>
+                  </div>
+                <hr>
+            </div>
+            
+        </div>
+
+        <div class="col-9" style="height: 70vh; width:60hw;" *ngIf="show.viewtype==2" >
+           
+            <div>รายการแผนการเดินรถ {{activedata.vname}} {{activedata.vlicent}}</div> 
+
+            <div *ngFor="let route of activedata.listroute">
                 <div class="container"
                     style="display: flex; justify-content: space-between; align-items: start; width:100hw; margin: 5px;">
                     <div class="col ms-2" style="display:flexbox; text-align: start;">
@@ -114,13 +176,13 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 </div>
 
 
-
-
-<ng-template #compdetailmodal let-modal>
-    <app-vehiclepage [modal]="modal" [activedata]="activedata" (talk)="companytalkback($event)"></app-vehiclepage>
+<ng-template #plandetailmodal let-modal>
+    <app-plandatapage  [modal]="modal" [vehicle]="activedata" [company]="activecompany"  
+    [planslot]="activeslot" [editplan]="activeplan" (talk)="routeplantalkback($event)"></app-plandatapage>
 </ng-template>
