--- a/src/app/page/loginpage/loginpage.component.scss
+++ b/src/app/page/loginpage/loginpage.component.scss
@@ -5,76 +5,29 @@ body {
     background-position: center center;
   }
   
-  .container {
-    position: relative;
-    max-width: 400px;
-    /* padding: 70px 40px; */
-    background-color: rgba(81, 163, 241, 0.9);
-    border-radius: 0px;
-    padding: 0px;
-    left: 100px;
-    /* box-shadow: 0 5px 55px hwb(78, 24, 45, 1); */
-    box-shadow: 5px 5px 25px 5px #6e8045;
-  }
-  
-  .incontainer {
-    padding: 40px 40px;
-  }
-  
-  
-  .container .inputbox {
-    position: relative;
-    max-width: 300px;
-    height: 46px;
-    left: 5px;
-    margin-bottom: 35px;
-    border-radius: 0px;
-    /* background-color: #e4e4da; */
-  }
-  
-  .container .inputbox:last-child {
-    margin-bottom: 0px;
-  }
-  
-  .container .inputbox input {
-    position: absolute;
-    top: 0;
-    left: 5px;
-    width: 100%;
-    border: 1px solid #1111;
-    background: white;
-    /* background: transparent; */
-    padding: 10px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    outline: none;
-    font-size: 16px;
-    color: #111;
-    font-weight: 500;
-  }
-  
-  .container .inputbox span {
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    padding: 10px;
-    display: inline-block;
-    font-size: 16px;
-    color: #111;
-    font-weight: 500;
-    transition: 0.5s;
-    pointer-events: none;
-  }
+/* Flexbox layout to center the form */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-  
-  .container .inputbox input:focus~span,
-  .container .inputbox input:valid~span {
-    transform: translateX(-10px) translateY(-32px);
-    font-size: 14px;
-  }
-  
-  @media only screen and (max-width: 660px) {
-    .container {
-     max-width: 330px;
-    }
-  }
+.frame {
+  width: 300px;
+  padding: 20px;
+  margin-top: -30vh;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  // background-color: lightblue;
+}
+
+.full-width {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.button-container {
+  text-align: center;
+}
+
